# hotel-site

./: .pre-commit-config.yaml  Makefile  pyproject.toml
src/accounts/: admin.py  apps.py  forms.py  manager.py  models.py  signals.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_profile.py  0003_alter_profile_birthday_alter_profile_first_name_and_more.py  0004_alter_user_email.py  0005_rename_is_confirmed_email_user_email_is_confirmed.py  0006_alter_profile_options_alter_user_options_and_more.py  0007_alter_user_password.py
src/accounts/tests/: __init__.py  test_forms.py  test_manager.py  test_models.py  test_signals.py  test_views.py
src/base/cases/: __init__.py
src/base/tests/: test_cases.py
src/bookings/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
src/bookings/migrations/: 0001_initial.py  0002_rename_is_children_booking_has_children.py  0003_alter_booking_options_alter_booking_check_in_and_more.py
src/bookings/tests/: test_forms.py  test_models.py  test_validators.py  test_views.py
src/core/: settings.py  urls.py
src/functional_tests/: fucntional_test.py  test_accounts.py  test_booking.py
src/rooms/: admin.py  models.py  urls.py  views.py
src/rooms/migrations/: 0001_initial.py  0002_alter_roomdata_double_beds_and_more.py  0002_number.py  0003_alter_room_options_alter_roomdata_options_and_more.py
src/rooms/tests/: test_models.py  test_view.py
src/utils/: models.py
src/utils/cases/: __init__.py  form_test_case.py  model_test_case.py
src/utils/static/: base.css  footer.css  form.css  home.css  (+1 more)
(+22 files in other folders)
